Basic webstore layout

--- a/templates/layouts/app.twig
+++ b/templates/layouts/app.twig
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="{{ site.language }}">
 <head>
-    {% block head %}{% include 'templates/layouts/helpers/head.twig' %}{% endblock %}
+    {% block head %}{% include 'layouts/helpers/head.twig' %}{% endblock %}
     {{ fn('wp_head') }}
 </head>
 <body {{ fn('body_class') }}>
 {% block header %}
-{% include 'templates/layouts/helpers/header.twig' %}
+{% include 'layouts/helpers/header.twig' %}
 {% endblock %}
 
 {% block content %}{{ post.content }}{% endblock %}
 
 {% block footer %}
-{% include 'templates/layouts/helpers/footer.twig' %}
+{% include 'layouts/helpers/footer.twig' %}
 {% endblock footer %}
 
 {{ fn('wp_footer') }}
