--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,13 +1,1 @@
-@tailwind base;
-
-@tailwind components;
-
-@import "themes/default",
-        "vendors/all",
-        "abstracts/all",
-        "base/all",
-        "components/all",
-        "layout/all",
-        "pages/all";
-
-@tailwind utilities;
+@import "~antea-sassy/sass/main";
