--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,1 +1,13 @@
-@import "~antea-sassy/sass/main";
+@charset "UTF-8";
+
+@import 'themes/default';
+@import 'abstracts/all';
+@import 'base/root';
+// Start importing all files
+@import 'vendors/all';
+@import 'components/all';
+@import 'base/all';
+@import 'layout/all';
+@import 'pages/all';
+// Import shame file to add all hacks
+@import 'shame';
