Post excerpt change

--- a/templates/partials/tease/product-vertical.html.twig
+++ b/templates/partials/tease/product-vertical.html.twig
@@ -15,7 +15,7 @@
             </a>
         </h3>
         <p class="product-card--v--excerpt">
-            {{ product.excerpt }}
+            {{ product.post_excerpt }}
         </p>
         <a href="{{ product.link }}" title="Bekijk {{ product.title }}" class="product-card--v--price">
             v.a. &euro; {{ _product.get_price }}
