Started with CTA-Banner

--- a/assets/styles/components/card/product-card/_component.scss
+++ b/assets/styles/components/card/product-card/_component.scss
@@ -19,6 +19,8 @@
   font-weight: 600;
   color: theme-get-color('primary');
   font-size: 20px;
+  margin-bottom: 0.5rem;
+  display: block;
 }
 
 .product-card--v--footer {
