CTA-Banner added and add to cart button added. basic button styles also added

--- a/templates/layouts/helpers/footer.twig
+++ b/templates/layouts/helpers/footer.twig
@@ -33,6 +33,6 @@
 </footer>
 
 <link rel="stylesheet" href="{{ theme.link }}/dist/styles/main.css">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/7c29995ac3.js" async defer></script>
 <script src="{{ theme.link }}/dist/scripts/main.js"></script>
