--- a/assets/styles/pages/_product.scss
+++ b/assets/styles/pages/_product.scss
@@ -52,11 +52,13 @@ h2.product-title {
 h3.product-title {
   color: theme-get-color('primary');
   font-size: 1.5rem;
+  font-weight: 400;
 }
 
 h4.product-title {
   color: theme-get-color('primary');
   font-size: 1.25rem;
+  font-weight: 400;
 }
 
 .product-price {
@@ -89,4 +91,16 @@ h4.product-title {
   color: theme-get-color('white');
   padding: get-spacing('sm');
   cursor: pointer;
+}
+
+.product-content {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: theme-get-color('primary');
+    font-weight: 400;
+  }
 }
