Product tabs done [WIP] sidebar

--- a/assets/styles/components/button/all.scss
+++ b/assets/styles/components/button/all.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "component";
 @import "product-tabs";
+@import "qty-button";
 @import "order-button";
 @import "shame";
