--- a/assets/styles/pages/_product.scss
+++ b/assets/styles/pages/_product.scss
@@ -1,106 +1,3 @@
-.product-header {
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 20vh;
-  position: relative;
-
-  @media screen and (min-width: 1024px) {
-    min-height: 400px;
-  }
-
-}
-
-.product-header__floater {
-  background: adjust-color(theme-get-color('primary'), $alpha: -0.2);
-  color: theme-get-color('white');
-  padding: get-spacing('lg');
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 33vw;
-}
-
-.product {
-  padding: get-spacing('lg') 0;
-  line-height: 1.5;
-}
-
-.product-header__category {
-  a {
-    color: theme-get-color('white');
-    font-size: 2rem;
-    font-weight: 200;
-    margin-bottom: 0;
-    text-decoration: none;
-    text-transform: uppercase;
-  }
-}
-
-.product-header__title {
-  margin: 0;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-h2.product-title {
-  color: theme-get-color('primary');
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 1.875rem;
-}
-
-h3.product-title {
-  color: theme-get-color('primary');
-  font-size: 1.5rem;
-  font-weight: 400;
-}
-
-h4.product-title {
-  color: theme-get-color('primary');
-  font-size: 1.25rem;
-  font-weight: 400;
-}
-
-.product-price {
-  font-weight: 700;
-  margin-top: get-spacing('lg');
-}
-
-.product-status {
-  font-weight: 700;
-
-  &.available {
-    color: theme-get-color('success');
-  }
-}
-
-.product-add-to-cart-form {
-  display: flex;
-
-  #quantity {
-    appearance: textfield;
-    max-width: 2rem;
-    text-align: center;
-    margin-right: get-spacing('sm');
-  }
-}
-
-.product-add-to-cart {
-  all: unset;
-  background: theme-get-color('success');
-  color: theme-get-color('white');
-  padding: get-spacing('sm');
-  cursor: pointer;
-}
-
-.product-content {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    color: theme-get-color('primary');
-    font-weight: 400;
-  }
-}
+@import "product/header";
+@import "product/content";
+@import "product/sidebar";
