--- a/assets/styles/components/button/order-button/_component.scss
+++ b/assets/styles/components/button/order-button/_component.scss
@@ -1,13 +1,16 @@
 %add-to-cart-button {
   @extend %btn;
-  color: theme-get-color('white');
-  background: theme-get-color('success');
-  text-transform: uppercase;
+  color: $button-atc-color;
+  background: $button-atc-background;
+
+  @if $button-atc-uppercase {
+    text-transform: uppercase;
+  }
 
   transition: background-color 355ms cubic-bezier(0.4, 1.25, 0.2, 1);
 
   &:hover {
-    background: adjust-color(theme-get-color('success'), $lightness: 15%);
+    background: $button-atc-color--hover;
   }
 }
 
