--- a/assets/styles/components/button/product-tabs/_component.scss
+++ b/assets/styles/components/button/product-tabs/_component.scss
@@ -4,19 +4,29 @@
 
 .product-tabs {
   all: unset;
-  border-bottom: 1px solid theme-get-color('secondary');
-  color: theme-get-color('primary');
+  @each $border, $val in $tabs-product-borders {
+    @if $val {
+      border-#{$border}: $tabs-product-borderwidth $tabs-product-borderstyle $tabs-product-bordercolor;
+    }
+  }
+
+  color: $tabs-product-color;
   cursor: pointer;
 
-  padding: get-spacing('sm') get-spacing('md');
-  transition: all 225ms cubic-bezier(0.2, 0.4, 0, 1);
+  padding: $tabs-product-padding;
+  transition: color 225ms cubic-bezier(0.2, 0.4, 0, 1);
 
   width: 100%;
   text-align: center;
 
   &--active {
-    border: 1px solid theme-get-color('secondary');
+    @each $border, $val in $tabs-product-borders--active {
+      @if $val {
+        border-#{$border}: $tabs-product-borderwidth--active $tabs-product-borderstyle--active $tabs-product-bordercolor--active;
+      }
+    }
     border-bottom: none;
+    color: $tabs-product-color--active;
   }
 }
 
