--- a/assets/styles/components/button/qty-button/_component.scss
+++ b/assets/styles/components/button/qty-button/_component.scss
@@ -1,11 +1,13 @@
 .qty-btn {
   @extend %btn;
-  color: theme-get-color('black');
-  border: 1px solid adjust-color(theme-get-color('black'), $alpha: -.6);
+  color: $button-qty-color;
+  border: $button-qty-borderwidth $button-qty-borderstyle $button-qty-bordercolor;
   transition: all 225ms linear;
 
   &:not([disabled]):hover {
-    border-color: adjust-color(theme-get-color('black'), $alpha: -.4);
+    border-width: $button-qty-borderwidth--disabled;
+    border-style: $button-qty-borderstyle--disabled;
+    border-color: $button-qty-bordercolor--disabled;
   }
 
   &--left {
