--- a/templates/partials/woocommerce/variation/sidebar.html.twig
+++ b/templates/partials/woocommerce/variation/sidebar.html.twig
@@ -1,5 +1,6 @@
 <aside class="product-sidebar">
-    <form method="GET" class="product-add-to-cart-form js-product-add-to-cart-form">
+    <form method="post" class="product-add-to-cart-form js-product-add-to-cart-form" action="{{ product.get_permalink }}">
+        {% do action( 'woocommerce_before_variations_form' ) %}
         <section class="">
             {% for key, attribute in attributes %}
                 Kies een {{ key|replace({'pa_': ''}) }}:
@@ -22,10 +23,14 @@
                 <button type="button" class="js-btn-add qty-btn qty-btn--right">+</button>
             </section>
             <input type="hidden" value="{{ post.ID }}" id="product_id" name="product_id">
+            <input type="hidden" value="{{ post.ID }}" id="add-to-cart" name="add-to-cart">
+            <input type="hidden" value="0" id="variation_id" name="variation_id">
             <button type="submit" class="product-add-to-cart">
                 <i class="fas fa-shopping-cart"></i> bestellen
             </button>
         </div>
+        {% do action('woocommerce_after_variations_form') %}
+
     </form>
 
     {% if product.is_in_stock %}
