--- a/assets/styles/components/button/product-tabs/_component.scss
+++ b/assets/styles/components/button/product-tabs/_component.scss
@@ -1,5 +1,9 @@
 .product-tabs-container {
   display: flex;
+
+  @media screen and (max-width: map-get($screens, 'md')) {
+    overflow-x: scroll;
+  }
 }
 
 .product-tabs {
