--- a/templates/layouts/helpers/footer.twig
+++ b/templates/layouts/helpers/footer.twig
@@ -9,7 +9,7 @@
 </footer>
 
 <footer class="footer">
-    <div class="container flex auto grid">
+    <div class="container auto grid">
         <div class="col-3">
             <h3>SITEMAP</h3>
             <nav class="footer-menu">
