--- a/templates/partials/header/topper.html.twig
+++ b/templates/partials/header/topper.html.twig
@@ -1,7 +1,7 @@
 <!-- Header topper -->
 <header class="header content">
     <div class="container auto flex size-full">
-        <span>
+        <span class="header-usp">
             <i class="fas fa-check"></i> Bestel onze ingenieursdiensten snel en eenvoudig online
         </span>
 
