--- a/assets/styles/layout/header/_navbar.scss
+++ b/assets/styles/layout/header/_navbar.scss
@@ -15,17 +15,27 @@
       top: 50.4px + $WP_ADMIN_BAR_HEIGHT;
     }
   }
+
+  @media screen and (max-width: map-get($screens, 'md')) {
+    padding: #{get-spacing('md') + get-spacing('sm')} 1rem;
+    max-width: calc(100vw - 2rem);
+  }
 }
 
 .custom-logo {
   width: 300px;
+  @media screen and (max-width: map-get($screens, 'md')) {
+    width: 250px;
+  }
 }
 
 .navbar {
   display: flex;
   flex: 1 1 auto;
-
   margin: auto 0;
+  @media screen and (max-width: map-get($screens, 'md')) {
+    flex-direction: column;
+  }
 }
 
 .nav-item {
@@ -37,5 +47,45 @@
 
   &:hover {
     color: $nav-item-color-hover;
+  }
+
+  @media screen and (max-width: map-get($screens, 'md')) {
+    padding: .5rem 0;
+    margin: .5rem 0;
+    border-bottom: 1px solid theme-get-color('primary');
+    text-align: center;
+  }
+}
+
+.nav-wrapper {
+  @media screen and (max-width: map-get($screens, 'md')) {
+    box-shadow: 0 3px 6px scale-color(theme-get-color('black'), $alpha: -40%);
+    background: theme-get-color('white');
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    transform: scale(1, 0);
+    opacity: 0;
+    transform-origin: top;
+    transition: all 225ms linear;
+
+    &.active {
+      transform: scale(1);
+      z-index: 40;
+      opacity: 1;
+      padding: .5rem;
+    }
+  }
+}
+
+.menu-toggle {
+  @extend %btn;
+  display: none;
+
+  @media screen and (max-width: map-get($screens, 'md')) {
+    display: block;
+    padding: 0;
+    margin-left: auto;
   }
 }
