--- a/assets/styles/pages/product/_sidebar.scss
+++ b/assets/styles/pages/product/_sidebar.scss
@@ -24,3 +24,9 @@
     border-bottom: 1px solid adjust-color(theme-get-color('black'), $alpha: -.6);
   }
 }
+
+.product-sidebar {
+  @media screen and (max-width: map-get($screens, 'md')) {
+    padding: 0 1rem;
+  }
+}
