--- a/templates/views/woocommerce/archive-product.html.twig
+++ b/templates/views/woocommerce/archive-product.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layouts/app.twig' %}
 
 {% block content %}
-    <div class="container auto products">
+    <div class="container auto products mobile-padded">
         <h1 class="page-title">{{ title }}</h1>
         <main class="grid">
             <div class="col-3">
