--- a/templates/views/woocommerce/checkout.html.twig
+++ b/templates/views/woocommerce/checkout.html.twig
@@ -3,7 +3,7 @@
 
     <form action="{{ fn('wc_get_checkout_url') }}" method="POST" name="checkout" class="form-checkout">
         {% if checkout.get_checkout_fields %}
-            <div class="container auto">
+            <div class="container auto mobile-padded">
 
                 <div class="grid">
                     <div class="col-6">
@@ -25,7 +25,7 @@
             </div>
         {% endif %}
 
-        <div class="container auto">
+        <div class="container auto mobile-padded">
             <h2 class="page-title">
                 Betaalgegevens
             </h2>
