--- a/assets/styles/components/button/all.scss
+++ b/assets/styles/components/button/all.scss
@@ -3,4 +3,6 @@
 @import "product-tabs";
 @import "qty-button";
 @import "order-button";
+@import "coupon-button";
+@import "wac-button";
 @import "shame";
