--- a/assets/styles/components/table/all.scss
+++ b/assets/styles/components/table/all.scss
@@ -1,4 +1,6 @@
 @import "variables";
 @import "component";
 @import "cart-table";
+@import "checkout-table";
+@import "order-table";
 @import "shame";
