--- a/templates/views/woocommerce/checkout.html.twig
+++ b/templates/views/woocommerce/checkout.html.twig
@@ -1,5 +1,27 @@
 <main>
-    {% do action('woocommerce_before_checkout_form', checkout) %}
+    <!-- TODO: Remove actions from 'woocommerce_before_checkout_form -->
+{#    {% do action('woocommerce_before_checkout_form', checkout) %}#}
+
+    <section class="container auto">
+        <form class="checkout_coupon woocommerce-form-coupon" method="post" style="display:none">
+
+            <p>
+                {{ __('If you have a coupon code, please apply it below.', 'woocommerce') }}
+            </p>
+
+            <p class="form-row form-row-first">
+                <input type="text" name="coupon_code" class="input-text" placeholder="{{ __('Coupon code', 'woocommerce') }}" id="coupon_code" value="" />
+            </p>
+
+            <p class="form-row form-row-last">
+                <button type="submit" class="button" name="apply_coupon" value="{{ __('Apply coupon', 'woocommerce') }}">
+                    {{ __('Apply coupon', 'woocommerce') }}
+                </button>
+            </p>
+
+            <div class="clear"></div>
+        </form>
+    </section>
 
     <form action="{{ fn('wc_get_checkout_url') }}" method="POST" name="checkout" class="form-checkout">
         {% if checkout.get_checkout_fields %}
@@ -19,7 +41,9 @@
                             Besteloverzicht
                         </h2>
                         {% do fn('woocommerce_order_review') %}
-                        {% do fn('woocommerce_checkout_coupon_form') %}
+                        <a class="showcoupon checkout-add-coupon" href="#">
+                            Kortingscode toevoegen
+                        </a>
                     </div>
                 </div>
             </div>
